# SourceUp

./: .gitignore  LICENSE  README.md  RELEASE.md  ROADMAP.md  pyproject.toml  sourceup-build.py  sourceup-package.py
.github/workflows/: release.yml
sourceup/: app.py  casts.py  manifest.py  platform.py  updater.py
sourceup/client/: PyZoteroClient.py  PyZoteroClientConfig.py  ZoteroBaseClientConfig.py  ZoteroClientProtocol.py  ZoteroMapper.py  ZoteroRepository.py  zotero_client.py  zotero_functions.py
sourceup/client/zotero/: BaseZoteroClientConfig.py  PyZoteroClientConfig.py  PyZoteroClientProtocol.py  ZoteroClientProtocol.py  ZoteroDataMapper.py  ZoteroDataRepository.py
sourceup/collection/: ZoteroCollection.py
sourceup/creator/: ZoteroBaseCreatorData.py  ZoteroCreator.py  ZoteroCreatorDataFactory.py  ZoteroCreatorDataRegistry.py  ZoteroCreatorType.py
sourceup/creator/data/: ZoteroCorporateCreatorData.py  ZoteroOrganizationCreatorData.py  ZoteroPersonCreatorData.py
sourceup/data/: zotero_collection.py  zotero_item.py  zotero_library.py
sourceup/data/collection/: ZoteroCollection.py
sourceup/exporter/: bibxml_functions.py  wordbibxml_functions.py
sourceup/item/: ZoteroBaseItemData.py  ZoteroItem.py  ZoteroItemDataCache.py  ZoteroItemDataFactory.py  ZoteroItemDataRegistry.py  ZoteroItemType.py
sourceup/model/: GenericListModel.py  ZoteroCollectionListModel.py  ZoteroLibraryListModel.py  zotero_collection_model.py  zotero_item_model.py  zotero_library_model.py
sourceup/settings/: Settings.py
sourceup/window/: main.py  manage_zotero_libraries.py
(+85 files in other folders)
