[tool.poetry]
name = "sourceup"
version = "0.1.0"
description = ""
authors = ["iredstonne"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
pyside6 = "^6.9.2"
pyinstaller = "^6.16.0"
pyzotero = "^1.6.16"
lxml = "^6.0.2"

[tool.poetry.scripts]
sourceup = "sourceup.app:main"
sourceup-build = "sourceup-build:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
