[tool.poetry]
name = "sourceup"
version = "0.1.0"
description = ""
authors = ["iredstonne"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
requests = "^2.32.5"
pyside6 = "^6.9.2"
pyinstaller = "^6.16.0"
pyzotero = "^1.6.16"
dateparser = "^1.2.2"
pydantic = "^2.12.5"

[tool.poetry.scripts]
sourceup = "sourceup.app:main"
sourceup-package = "sourceup-package:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
